@@ -1,19 +1,18 @@
 
 - beep() shouldn't use "special event" from "KDE system notifications",
   but define some own event? (and use own sample?)
-- print name of currently preparing tea in tooltip
 - display times in Menu nicer (not in seconds but maybe just "nn:yy"?)
 - somehow strip hours from KLocale::formatTime()-returned string
   in locale-respecting way
 - some more tidying of configure-dialog
   (eg. initial size, don't stretch buttons)
+- use QMovie for tea_is_finished-icon instead of two alternating pixmaps?
+- display tea-menu on left-click? maybe on middle-click?
+  (and offer "just cancel current" if already running)
 - DCOP interface?
 - have a closer look at i18n
+- use KAction for enable/disable widgets?
 
-- check that changing config doesn't influence current running timer
-  in any way
 - check for memory leaks
 - make config-reading bullet-proof
-- better get 'teatime' immediately before starting timer, not
-  when menu-item is selected?
 - use "bubble" for tea-ready-notification (see Kopete)
